Todo creation done

--- a/src/main/resources/templates/dashboard/_menu.html
+++ b/src/main/resources/templates/dashboard/_menu.html
@@ -1,9 +1,6 @@
 <div xmlns:th="http://www.thymeleaf.org"
      style="border: 1px solid #ccc;padding:5px;margin-bottom:20px;">
-
-    <a th:href="@{/}">Create Todo</a>
-
-    | &nbsp;
-
-    <a th:href="@{/register}">List Todo</a>
+    <a th:href="@{/todo/list}">List Todo</a>
+    &nbsp;
+    <a th:href="@{/todo/create}">Create Todo</a>
 </div>
