Provide a logout button on UI done.

--- a/src/main/resources/templates/dashboard/_menu.html
+++ b/src/main/resources/templates/dashboard/_menu.html
@@ -3,4 +3,6 @@
     <a th:href="@{/todo/list}">List Todo</a>
     &nbsp;
     <a th:href="@{/todo/create}">Create Todo</a>
+    &nbsp;
+    <a th:href="@{/logout}">Logout</a>
 </div>
